<resources>
    <string name="app_name">Friendly Chat</string>
    <string name="send_btn">SEND</string>
    <string name="msg_hint">Type your message</string>
    <string name="login_hint_registration">E-mail</string>
    <string name="password_hint_registration">Password</string>
    <string name="sign_up_button_text">SIGN UP</string>
    <string name="want_to_sign_up">Want to sign up?</string>
    <string name="sign_in_button_login">SIGN IN</string>
    <string name="new_message_menu_nmsgitem">New Message</string>
    <string name="new_message_menu_sgnoutitem">Sign Out</string>
    <string name="user_name_hint_register">User Name</string>
    <string name="already_have_an_account">Already have an account?</string>
</resources>
