<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/holo_blue_bright"
    tools:context="com.friendlychat.auth.RegisterActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_circleImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:civ_border_color="#000452"
        app:civ_border_width="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/choose_image_button_register"
        app:layout_constraintEnd_toEndOf="@+id/choose_image_button_register"
        app:layout_constraintStart_toStartOf="@+id/choose_image_button_register"
        app:layout_constraintTop_toTopOf="@+id/choose_image_button_register" />

    <EditText
        android:id="@+id/username_editText_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/register_field_shape"
        android:hint="@string/user_name_hint_register"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_image_button_register" />


    <EditText
        android:id="@+id/email_edittext_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/register_field_shape"
        android:hint="@string/login_hint_registration"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/username_editText_register"
        app:layout_constraintStart_toStartOf="@+id/username_editText_register"
        app:layout_constraintTop_toBottomOf="@+id/username_editText_register" />

    <EditText
        android:id="@+id/pass_editText_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/register_field_shape"
        android:hint="@string/password_hint_registration"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/email_edittext_register"
        app:layout_constraintStart_toStartOf="@+id/email_edittext_register"
        app:layout_constraintTop_toBottomOf="@+id/email_edittext_register"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/register_button_shape"
        android:text="@string/sign_up_button_text"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/pass_editText_register"
        app:layout_constraintStart_toStartOf="@+id/pass_editText_register"
        app:layout_constraintTop_toBottomOf="@+id/pass_editText_register" />

    <TextView
        android:id="@+id/signIn_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:text="@string/already_have_an_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_button" />

    <Button
        android:id="@+id/choose_image_button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Choose photo"
        android:background="@drawable/pick_photo_button_shape"
        android:width="150dp"
        android:height="150dp"
        android:textColor="@android:color/holo_blue_bright"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>